updated and modified files

--- a/index.html
+++ b/index.html
@@ -23,10 +23,13 @@
                 <ul class="nav-links">
                     <li><a href="#home" class="active">Home</a></li>
                     <li><a href="#services">Services</a></li>
+                    <li><a href="#process">Process</a></li>
                     <li><a href="#about">About</a></li>
                     <li><a href="#portfolio">Portfolio</a></li>
+                    <li><a href="#testimonials">Testimonials</a></li>
                     <li><a href="#contact">Contact</a></li>
                 </ul>
+
                 <div class="theme-toggle">
                     <i class="fas fa-moon"></i>
                     <i class="fas fa-sun"></i>
@@ -109,6 +112,72 @@
         </div>
     </section>
 
+    <section id="process" class="process">
+        <div class="container">
+            <div class="section-header">
+                <h2>Our Process</h2>
+                <p>How we bring your ideas to life</p>
+            </div>
+            <div class="process-timeline">
+                <div class="process-step">
+                    <div class="process-number">01</div>
+                    <div class="process-content">
+                        <div class="process-icon">
+                            <i class="fas fa-comments"></i>
+                        </div>
+                        <h3>Discovery</h3>
+                        <p>We start by understanding your business goals, target audience, and project requirements
+                            through in-depth consultations.</p>
+                    </div>
+                </div>
+                <div class="process-step">
+                    <div class="process-number">02</div>
+                    <div class="process-content">
+                        <div class="process-icon">
+                            <i class="fas fa-pencil-ruler"></i>
+                        </div>
+                        <h3>Planning & Design</h3>
+                        <p>Our team creates detailed wireframes, prototypes, and design concepts based on your
+                            requirements and feedback.</p>
+                    </div>
+                </div>
+                <div class="process-step">
+                    <div class="process-number">03</div>
+                    <div class="process-content">
+                        <div class="process-icon">
+                            <i class="fas fa-laptop-code"></i>
+                        </div>
+                        <h3>Development</h3>
+                        <p>We transform designs into functional products using the latest technologies and best coding
+                            practices.</p>
+                    </div>
+                </div>
+                <div class="process-step">
+                    <div class="process-number">04</div>
+                    <div class="process-content">
+                        <div class="process-icon">
+                            <i class="fas fa-vial"></i>
+                        </div>
+                        <h3>Testing</h3>
+                        <p>Rigorous quality assurance testing ensures your product works flawlessly across all devices
+                            and browsers.</p>
+                    </div>
+                </div>
+                <div class="process-step">
+                    <div class="process-number">05</div>
+                    <div class="process-content">
+                        <div class="process-icon">
+                            <i class="fas fa-rocket"></i>
+                        </div>
+                        <h3>Launch & Support</h3>
+                        <p>We handle the deployment process and provide ongoing support and maintenance to keep your
+                            product running smoothly.</p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="about" class="about">
         <div class="container">
             <div class="section-header">
@@ -138,6 +207,104 @@
                         <div class="stat">
                             <h4>5+</h4>
                             <p>Years Experience</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section id="technologies" class="technologies">
+        <div class="container">
+            <div class="section-header">
+                <h2>Technologies We Use</h2>
+                <p>Our tech stack for building modern digital solutions</p>
+            </div>
+            <div class="tech-categories">
+                <div class="tech-category">
+                    <h3>Frontend</h3>
+                    <div class="tech-icons">
+                        <div class="tech-icon">
+                            <img src="images/tech/html5.svg" alt="HTML5">
+                            <span>HTML5</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/css3.svg" alt="CSS3">
+                            <span>CSS3</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/javascript.svg" alt="JavaScript">
+                            <span>JavaScript</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/react.svg" alt="React">
+                            <span>React</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/vue.svg" alt="Vue.js">
+                            <span>Vue.js</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/angular.svg" alt="Angular">
+                            <span>Angular</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="tech-category">
+                    <h3>Backend</h3>
+                    <div class="tech-icons">
+                        <div class="tech-icon">
+                            <img src="images/tech/nodejs.svg" alt="Node.js">
+                            <span>Node.js</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/python.svg" alt="Python">
+                            <span>Python</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/php.svg" alt="PHP">
+                            <span>PHP</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/mongodb.svg" alt="MongoDB">
+                            <span>MongoDB</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/mysql.svg" alt="MySQL">
+                            <span>MySQL</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/firebase.svg" alt="Firebase">
+                            <span>Firebase</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="tech-category">
+                    <h3>Tools & Platforms</h3>
+                    <div class="tech-icons">
+                        <div class="tech-icon">
+                            <img src="images/tech/git.svg" alt="Git">
+                            <span>Git</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/figma.svg" alt="Figma">
+                            <span>Figma</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/aws.svg" alt="AWS">
+                            <span>AWS</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/docker.svg" alt="Docker">
+                            <span>Docker</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/wordpress.svg" alt="WordPress">
+                            <span>WordPress</span>
+                        </div>
+                        <div class="tech-icon">
+                            <img src="images/tech/shopify.svg" alt="Shopify">
+                            <span>Shopify</span>
                         </div>
                     </div>
                 </div>
@@ -210,6 +377,105 @@
         </div>
     </section>
 
+    <section id="testimonials" class="testimonials">
+        <div class="container">
+            <div class="section-header">
+                <h2>Client Testimonials</h2>
+                <p>What our clients say about us</p>
+            </div>
+            <div class="testimonial-slider">
+                <div class="testimonial-slide">
+                    <div class="testimonial-content">
+                        <div class="quote-icon">
+                            <i class="fas fa-quote-left"></i>
+                        </div>
+                        <p>TrioCraft transformed our business with an exceptional e-commerce platform. Their attention
+                            to detail and technical expertise exceeded our expectations. The website is not only
+                            beautiful but also performs incredibly well.</p>
+                        <div class="client-info">
+                            <img src="images/client-1.jpg" alt="Sarah Johnson">
+                            <div>
+                                <h4>Sarah Johnson</h4>
+                                <p>CEO, FashionHub</p>
+                            </div>
+                        </div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-slide">
+                    <div class="testimonial-content">
+                        <div class="quote-icon">
+                            <i class="fas fa-quote-left"></i>
+                        </div>
+                        <p>Working with TrioCraft was a game-changer for our startup. Their team delivered a robust
+                            backend system that scaled seamlessly with our growth. Their technical knowledge and
+                            problem-solving abilities are outstanding.</p>
+                        <div class="client-info">
+                            <img src="images/client-2.jpg" alt="Michael Chen">
+                            <div>
+                                <h4>Michael Chen</h4>
+                                <p>CTO, TechNova</p>
+                            </div>
+                        </div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                        </div>
+                    </div>
+                </div>
+                <div class="testimonial-slide">
+                    <div class="testimonial-content">
+                        <div class="quote-icon">
+                            <i class="fas fa-quote-left"></i>
+                        </div>
+                        <p>The UI/UX design TrioCraft created for our app completely revolutionized our user engagement.
+                            The intuitive interface and beautiful design elements have received countless compliments
+                            from our users. Highly recommended!</p>
+                        <div class="client-info">
+                            <img src="images/client-3.jpg" alt="Emily Rodriguez">
+                            <div>
+                                <h4>Emily Rodriguez</h4>
+                                <p>Product Manager, HealthFit</p>
+                            </div>
+                        </div>
+                        <div class="rating">
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star"></i>
+                            <i class="fas fa-star-half-alt"></i>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="testimonial-dots">
+                <span class="dot active"></span>
+                <span class="dot"></span>
+                <span class="dot"></span>
+            </div>
+        </div>
+    </section>
+
+    <section id="cta" class="cta">
+        <div class="container">
+            <div class="cta-content">
+                <h2>Ready to Transform Your Digital Presence?</h2>
+                <p>Let's collaborate to bring your vision to life with our expertise in web development and design.</p>
+                <a href="#contact" class="btn btn-primary">Start Your Project</a>
+            </div>
+            <div class="cta-pattern"></div>
+        </div>
+    </section>
+
     <section id="contact" class="contact">
         <div class="container">
             <div class="section-header">
@@ -279,8 +545,11 @@
                     <ul>
                         <li><a href="#home">Home</a></li>
                         <li><a href="#services">Services</a></li>
+                        <li><a href="#process">Process</a></li>
                         <li><a href="#about">About</a></li>
+                        <li><a href="#technologies">Technologies</a></li>
                         <li><a href="#portfolio">Portfolio</a></li>
+                        <li><a href="#testimonials">Testimonials</a></li>
                         <li><a href="#contact">Contact</a></li>
                     </ul>
                 </div>
