Changed portfolio section. Removed section temporarily

--- a/index.html
+++ b/index.html
@@ -71,28 +71,28 @@
             <div class="services-grid">
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-code"></i>
+                        <i class="fas fa-laptop-code"></i>
                     </div>
-                    <h3>Frontend Development</h3>
-                    <p>Responsive, interactive, and user-friendly interfaces built with modern technologies.</p>
+                    <h3>Full Stack Development</h3>
+                    <p>End-to-end web application development with responsive interfaces and robust backend systems.</p>
                     <ul>
-                        <li>HTML5, CSS3, JavaScript</li>
-                        <li>React, Vue, Angular</li>
-                        <li>Responsive Design</li>
+                        <li>Web Applications</li>
+                        <li>API Development</li>
+                        <li>Database Integration</li>
                         <li>Performance Optimization</li>
                     </ul>
                 </div>
                 <div class="service-card">
                     <div class="service-icon">
-                        <i class="fas fa-server"></i>
+                        <i class="fas fa-cloud"></i>
                     </div>
-                    <h3>Backend Development</h3>
-                    <p>Robust and scalable server-side solutions to power your applications.</p>
+                    <h3>Big Data & Cloud Services</h3>
+                    <p>Scalable solutions for data processing, storage, and cloud infrastructure management.</p>
                     <ul>
-                        <li>Node.js, Python, PHP</li>
-                        <li>RESTful APIs</li>
-                        <li>Database Design</li>
-                        <li>Cloud Integration</li>
+                        <li>Data Analytics</li>
+                        <li>Cloud Migration</li>
+                        <li>Serverless Architecture</li>
+                        <li>Scalable Infrastructure</li>
                     </ul>
                 </div>
                 <div class="service-card">
@@ -318,61 +318,8 @@
                 <h2>Our Portfolio</h2>
                 <p>Some of our best work</p>
             </div>
-            <div class="portfolio-filter">
-                <button class="filter-btn active" data-filter="all">All</button>
-                <button class="filter-btn" data-filter="frontend">Frontend</button>
-                <button class="filter-btn" data-filter="backend">Backend</button>
-                <button class="filter-btn" data-filter="uiux">UI/UX</button>
-            </div>
             <div class="portfolio-grid">
-                <div class="portfolio-item" data-category="frontend uiux">
-                    <img src="images/portfolio-1.jpg" alt="E-commerce Website">
-                    <div class="portfolio-overlay">
-                        <h3>E-commerce Platform</h3>
-                        <p>Frontend Development, UI/UX Design</p>
-                        <a href="#" class="btn btn-sm">View Details</a>
-                    </div>
-                </div>
-                <div class="portfolio-item" data-category="backend">
-                    <img src="images/portfolio-2.jpg" alt="Booking System">
-                    <div class="portfolio-overlay">
-                        <h3>Booking System API</h3>
-                        <p>Backend Development</p>
-                        <a href="#" class="btn btn-sm">View Details</a>
-                    </div>
-                </div>
-                <div class="portfolio-item" data-category="uiux">
-                    <img src="images/portfolio-3.jpg" alt="Mobile App Design">
-                    <div class="portfolio-overlay">
-                        <h3>Fitness App Design</h3>
-                        <p>UI/UX Design</p>
-                        <a href="#" class="btn btn-sm">View Details</a>
-                    </div>
-                </div>
-                <div class="portfolio-item" data-category="frontend backend">
-                    <img src="images/portfolio-4.jpg" alt="Dashboard">
-                    <div class="portfolio-overlay">
-                        <h3>Analytics Dashboard</h3>
-                        <p>Frontend & Backend Development</p>
-                        <a href="#" class="btn btn-sm">View Details</a>
-                    </div>
-                </div>
-                <div class="portfolio-item" data-category="uiux frontend">
-                    <img src="images/portfolio-5.jpg" alt="Restaurant Website">
-                    <div class="portfolio-overlay">
-                        <h3>Restaurant Website</h3>
-                        <p>UI/UX Design, Frontend Development</p>
-                        <a href="#" class="btn btn-sm">View Details</a>
-                    </div>
-                </div>
-                <div class="portfolio-item" data-category="backend">
-                    <img src="images/portfolio-6.jpg" alt="CRM System">
-                    <div class="portfolio-overlay">
-                        <h3>CRM System</h3>
-                        <p>Backend Development</p>
-                        <a href="#" class="btn btn-sm">View Details</a>
-                    </div>
-                </div>
+                <!-- Portfolio items will be added here -->
             </div>
         </div>
     </section>
