Changed hero section and added to services section

--- a/index.html
+++ b/index.html
@@ -5,12 +5,31 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TrioCraft - Web Development & UI/UX Services</title>
+    <meta name="description" content="TrioCraft specializes in full stack development, big data & cloud services, and UI/UX design to transform your ideas into exceptional digital experiences.">
+    <meta name="keywords" content="web development, full stack development, UI/UX design, big data services, cloud services">
+    <link rel="canonical" href="https://www.triocraft.com">
+    <meta name="robots" content="index, follow">
+    <meta name="author" content="TrioCraft">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.triocraft.com">
+    <meta property="og:title" content="TrioCraft - Web Development & UI/UX Services">
+    <meta property="og:description" content="Full stack development, big data & cloud services, and UI/UX design to transform your ideas into exceptional digital experiences.">
+    <meta property="og:image" content="https://www.triocraft.com/images/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.triocraft.com">
+    <meta property="twitter:title" content="TrioCraft - Web Development & UI/UX Services">
+    <meta property="twitter:description" content="Full stack development, big data & cloud services, and UI/UX design to transform your ideas into exceptional digital experiences.">
+    <meta property="twitter:image" content="https://www.triocraft.com/images/og-image.jpg">
 </head>
 
 <body>
@@ -48,7 +67,10 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Crafting Digital Excellence</h1>
-                <h2>Frontend • Backend • UI/UX</h2>
+                <div class="hero-services">
+                    <h2 class="hero-subtitle">Full Stack • Big Data & Cloud • UI/UX Design</h2>
+                    <h2 class="hero-subtitle">Digital Marketing • Photo/Video Editing</h2>
+                </div>
                 <p>We transform your ideas into exceptional digital experiences with our expert development and design
                     services.</p>
                 <div class="cta-buttons">
@@ -57,7 +79,7 @@
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/hero-image.svg" alt="Web Development Illustration">
+                <img src="images/hero-image.svg" alt="TrioCraft web development and design services illustration">
             </div>
         </div>
     </section>
@@ -106,6 +128,32 @@
                         <li>Wireframing & Prototyping</li>
                         <li>Visual Design</li>
                         <li>Usability Testing</li>
+                    </ul>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-bullhorn"></i>
+                    </div>
+                    <h3>Digital Marketing</h3>
+                    <p>Strategic marketing solutions to increase brand visibility and drive customer engagement.</p>
+                    <ul>
+                        <li>Search Engine Optimization</li>
+                        <li>Social Media Management</li>
+                        <li>Content Marketing</li>
+                        <li>Analytics & Reporting</li>
+                    </ul>
+                </div>
+                <div class="service-card">
+                    <div class="service-icon">
+                        <i class="fas fa-film"></i>
+                    </div>
+                    <h3>Photo/Video Editing</h3>
+                    <p>Professional editing services to transform your visual content into captivating media.</p>
+                    <ul>
+                        <li>Image Retouching</li>
+                        <li>Video Post-Production</li>
+                        <li>Motion Graphics</li>
+                        <li>Color Grading</li>
                     </ul>
                 </div>
             </div>
@@ -225,27 +273,27 @@
                     <h3>Frontend</h3>
                     <div class="tech-icons">
                         <div class="tech-icon">
-                            <img src="images/tech/html5.svg" alt="HTML5">
+                            <img src="images/tech/html5.svg" alt="HTML5 technology used by TrioCraft">
                             <span>HTML5</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/css3.svg" alt="CSS3">
+                            <img src="images/tech/css3.svg" alt="CSS3 technology used by TrioCraft">
                             <span>CSS3</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/javascript.svg" alt="JavaScript">
+                            <img src="images/tech/javascript.svg" alt="JavaScript technology used by TrioCraft">
                             <span>JavaScript</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/react.svg" alt="React">
+                            <img src="images/tech/react.svg" alt="React technology used by TrioCraft">
                             <span>React</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/vue.svg" alt="Vue.js">
+                            <img src="images/tech/vue.svg" alt="Vue.js technology used by TrioCraft">
                             <span>Vue.js</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/angular.svg" alt="Angular">
+                            <img src="images/tech/angular.svg" alt="Angular technology used by TrioCraft">
                             <span>Angular</span>
                         </div>
                     </div>
@@ -254,27 +302,27 @@
                     <h3>Backend</h3>
                     <div class="tech-icons">
                         <div class="tech-icon">
-                            <img src="images/tech/nodejs.svg" alt="Node.js">
+                            <img src="images/tech/nodejs.svg" alt="Node.js technology used by TrioCraft">
                             <span>Node.js</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/python.svg" alt="Python">
+                            <img src="images/tech/python.svg" alt="Python technology used by TrioCraft">
                             <span>Python</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/php.svg" alt="PHP">
+                            <img src="images/tech/php.svg" alt="PHP technology used by TrioCraft">
                             <span>PHP</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/mongodb.svg" alt="MongoDB">
+                            <img src="images/tech/mongodb.svg" alt="MongoDB technology used by TrioCraft">
                             <span>MongoDB</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/mysql.svg" alt="MySQL">
+                            <img src="images/tech/mysql.svg" alt="MySQL technology used by TrioCraft">
                             <span>MySQL</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/firebase.svg" alt="Firebase">
+                            <img src="images/tech/firebase.svg" alt="Firebase technology used by TrioCraft">
                             <span>Firebase</span>
                         </div>
                     </div>
@@ -283,27 +331,27 @@
                     <h3>Tools & Platforms</h3>
                     <div class="tech-icons">
                         <div class="tech-icon">
-                            <img src="images/tech/git.svg" alt="Git">
+                            <img src="images/tech/git.svg" alt="Git technology used by TrioCraft">
                             <span>Git</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/figma.svg" alt="Figma">
+                            <img src="images/tech/figma.svg" alt="Figma technology used by TrioCraft">
                             <span>Figma</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/aws.svg" alt="AWS">
+                            <img src="images/tech/aws.svg" alt="AWS technology used by TrioCraft">
                             <span>AWS</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/docker.svg" alt="Docker">
+                            <img src="images/tech/docker.svg" alt="Docker technology used by TrioCraft">
                             <span>Docker</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/wordpress.svg" alt="WordPress">
+                            <img src="images/tech/wordpress.svg" alt="WordPress technology used by TrioCraft">
                             <span>WordPress</span>
                         </div>
                         <div class="tech-icon">
-                            <img src="images/tech/shopify.svg" alt="Shopify">
+                            <img src="images/tech/shopify.svg" alt="Shopify technology used by TrioCraft">
                             <span>Shopify</span>
                         </div>
                     </div>
@@ -331,7 +379,7 @@
                 <p>What our clients say about us</p>
             </div>
             <div class="testimonial-slider">
-                <div class="testimonial-slide">
+                <div class="testimonial-slide active">
                     <div class="testimonial-content">
                         <div class="quote-icon">
                             <i class="fas fa-quote-left"></i>
@@ -340,7 +388,7 @@
                             to detail and technical expertise exceeded our expectations. The website is not only
                             beautiful but also performs incredibly well.</p>
                         <div class="client-info">
-                            <img src="images/client-1.jpg" alt="Sarah Johnson">
+                            <img src="images/client-1.jpg" alt="Sarah Johnson - CEO of FashionHub">
                             <div>
                                 <h4>Sarah Johnson</h4>
                                 <p>CEO, FashionHub</p>
@@ -364,7 +412,7 @@
                             backend system that scaled seamlessly with our growth. Their technical knowledge and
                             problem-solving abilities are outstanding.</p>
                         <div class="client-info">
-                            <img src="images/client-2.jpg" alt="Michael Chen">
+                            <img src="images/client-2.jpg" alt="Michael Chen - CTO of TechNova">
                             <div>
                                 <h4>Michael Chen</h4>
                                 <p>CTO, TechNova</p>
@@ -388,7 +436,7 @@
                             The intuitive interface and beautiful design elements have received countless compliments
                             from our users. Highly recommended!</p>
                         <div class="client-info">
-                            <img src="images/client-3.jpg" alt="Emily Rodriguez">
+                            <img src="images/client-3.jpg" alt="Emily Rodriguez - Product Manager at HealthFit">
                             <div>
                                 <h4>Emily Rodriguez</h4>
                                 <p>Product Manager, HealthFit</p>
@@ -404,10 +452,16 @@
                     </div>
                 </div>
             </div>
-            <div class="testimonial-dots">
-                <span class="dot active"></span>
-                <span class="dot"></span>
-                <span class="dot"></span>
+            <div class="testimonial-navigation">
+                <div class="testimonial-dots">
+                    <span class="dot active" data-slide="0"></span>
+                    <span class="dot" data-slide="1"></span>
+                    <span class="dot" data-slide="2"></span>
+                </div>
+                <div class="testimonial-arrows">
+                    <button class="prev-testimonial"><i class="fas fa-chevron-left"></i></button>
+                    <button class="next-testimonial"><i class="fas fa-chevron-right"></i></button>
+                </div>
             </div>
         </div>
     </section>
@@ -526,6 +580,65 @@
     </footer>
 
     <script src="js/script.js"></script>
+
+    <!-- Structured Data for Local Business -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ProfessionalService",
+      "name": "TrioCraft",
+      "image": "https://www.triocraft.com/images/logo.jpg",
+      "url": "https://www.triocraft.com",
+      "telephone": "+1 (555) 123-4567",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "123 Tech Street",
+        "addressLocality": "Digital City",
+        "addressCountry": "US"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": 40.7128,
+        "longitude": -74.0060
+      },
+      "openingHoursSpecification": {
+        "@type": "OpeningHoursSpecification",
+        "dayOfWeek": [
+          "Monday",
+          "Tuesday",
+          "Wednesday",
+          "Thursday",
+          "Friday"
+        ],
+        "opens": "09:00",
+        "closes": "18:00"
+      },
+      "sameAs": [
+        "https://www.facebook.com/triocraft",
+        "https://www.twitter.com/triocraft",
+        "https://www.linkedin.com/company/triocraft",
+        "https://www.instagram.com/triocraft"
+      ]
+    }
+    </script>
+
+    <!-- Structured Data for Services -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Service",
+      "serviceType": "Web Development",
+      "provider": {
+        "@type": "ProfessionalService",
+        "name": "TrioCraft"
+      },
+      "description": "End-to-end web application development with responsive interfaces and robust backend systems.",
+      "areaServed": {
+        "@type": "Country",
+        "name": "United States"
+      }
+    }
+    </script>
 </body>
 
 </html>
