changes in the designs

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
     <header>
         <div class="container">
             <div class="logo">
-                <h1>Trio<span>Craft</span></h1>
+                <!-- <h1>Trio<span>Craft</span></h1> -->
+                <a href=""><h1>Trio<span>Craft</span></h1></a>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -63,23 +64,22 @@
         </div>
     </header>
 
-    <section id="home" class="hero">
+    <section class="hero">
         <div class="container">
             <div class="hero-content">
-                <h1>Crafting Digital Excellence</h1>
                 <div class="hero-services">
-                    <h2 class="hero-subtitle">Full Stack • Big Data & Cloud • UI/UX Design</h2>
-                    <h2 class="hero-subtitle">Digital Marketing • Photo/Video Editing</h2>
-                </div>
-                <p>We transform your ideas into exceptional digital experiences with our expert development and design
-                    services.</p>
-                <div class="cta-buttons">
-                    <a href="#services" class="btn btn-primary">Our Services</a>
-                    <a href="#contact" class="btn btn-secondary">Get in Touch</a>
+                    <span class="hero-subtitle">Welcome to TrioCraft 😊</span>
+                    <h1>Transforming Ideas into Digital Excellence</h1>
+                    <h2>Your Partner in Web Development & Design</h2>
+                    <p>We craft innovative digital solutions that help businesses thrive in the modern digital landscape. Our expertise spans across web development, UI/UX design, and digital marketing.</p>
+                    <div class="cta-buttons">
+                        <a href="#contact" class="btn btn-primary">Start Your Project</a>
+                        <a href="#portfolio" class="btn btn-secondary">View Our Work</a>
+                    </div>
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/hero-image.svg" alt="TrioCraft web development and design services illustration">
+                <img src="images/hero-image.svg" alt="Hero Image">
             </div>
         </div>
     </section>
