--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>TrioCraft - Web Development & UI/UX Services</title>
-    <meta name="description" content="TrioCraft specializes in full stack development, big data & cloud services, and UI/UX design to transform your ideas into exceptional digital experiences.">
-    <meta name="keywords" content="web development, full stack development, UI/UX design, big data services, cloud services">
+    <meta name="description"
+        content="TrioCraft specializes in full stack development, big data & cloud services, and UI/UX design to transform your ideas into exceptional digital experiences.">
+    <meta name="keywords"
+        content="web development, full stack development, UI/UX design, big data services, cloud services">
     <link rel="canonical" href="https://www.triocraft.com">
     <meta name="robots" content="index, follow">
     <meta name="author" content="TrioCraft">
@@ -16,19 +18,21 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
-    
+
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.triocraft.com">
     <meta property="og:title" content="TrioCraft - Web Development & UI/UX Services">
-    <meta property="og:description" content="Full stack development, big data & cloud services, and UI/UX design to transform your ideas into exceptional digital experiences.">
+    <meta property="og:description"
+        content="Full stack development, big data & cloud services, and UI/UX design to transform your ideas into exceptional digital experiences.">
     <meta property="og:image" content="https://www.triocraft.com/images/og-image.jpg">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.triocraft.com">
     <meta property="twitter:title" content="TrioCraft - Web Development & UI/UX Services">
-    <meta property="twitter:description" content="Full stack development, big data & cloud services, and UI/UX design to transform your ideas into exceptional digital experiences.">
+    <meta property="twitter:description"
+        content="Full stack development, big data & cloud services, and UI/UX design to transform your ideas into exceptional digital experiences.">
     <meta property="twitter:image" content="https://www.triocraft.com/images/og-image.jpg">
 </head>
 
@@ -37,7 +41,9 @@
         <div class="container">
             <div class="logo">
                 <!-- <h1>Trio<span>Craft</span></h1> -->
-                <a href=""><h1>Trio<span>Craft</span></h1></a>
+                <a href="">
+                    <h1>Trio<span>Craft</span></h1>
+                </a>
             </div>
             <nav>
                 <ul class="nav-links">
@@ -68,18 +74,53 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-services">
-                    <span class="hero-subtitle">Welcome to TrioCraft 😊</span>
-                    <h1>Transforming Ideas into Digital Excellence</h1>
-                    <h2>Your Partner in Web Development & Design</h2>
-                    <p>We craft innovative digital solutions that help businesses thrive in the modern digital landscape. Our expertise spans across web development, UI/UX design, and digital marketing.</p>
+                    <span class="hero-subtitle">Welcome to TrioCraft 🚀</span>
+                    <h1>Innovative Digital Solutions for Your Business</h1>
+                    <h2>Where Technology Meets Creativity</h2>
+                    <p>We're a team of passionate developers and designers crafting exceptional digital experiences.
+                        From web development to UI/UX design, we transform your ideas into powerful digital solutions
+                        that drive growth.</p>
                     <div class="cta-buttons">
-                        <a href="#contact" class="btn btn-primary">Start Your Project</a>
-                        <a href="#portfolio" class="btn btn-secondary">View Our Work</a>
+                        <a href="#contact" class="btn btn-primary">Get Started <i class="fas fa-arrow-right"></i></a>
+                        <a href="#portfolio" class="btn btn-secondary">Explore Our Work</a>
+                    </div>
+                    <div class="hero-features">
+                        <div class="feature">
+                            <i class="fas fa-check-circle"></i>
+                            <span>100% Client Satisfaction</span>
+                        </div>
+                        <div class="feature">
+                            <i class="fas fa-clock"></i>
+                            <span>Fast Delivery</span>
+                        </div>
+                        <div class="feature">
+                            <i class="fas fa-headset"></i>
+                            <span>24/7 Support</span>
+                        </div>
                     </div>
                 </div>
             </div>
             <div class="hero-image">
-                <img src="images/hero-image.svg" alt="Hero Image">
+                <div class="hero-image-container">
+                    <img src="images/hero-image.svg" alt="Digital Solutions Illustration">
+                    <div class="floating-elements">
+                        <div class="float-element" data-speed="2">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <div class="float-element" data-speed="3">
+                            <i class="fas fa-paint-brush"></i>
+                        </div>
+                        <div class="float-element" data-speed="4">
+                            <i class="fas fa-mobile-alt"></i>
+                        </div>
+                        <div class="float-element" data-speed="2.5">
+                            <i class="fas fa-server"></i>
+                        </div>
+                        <div class="float-element" data-speed="3.5">
+                            <i class="fas fa-cloud"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -489,26 +530,26 @@
                         <i class="fas fa-envelope"></i>
                         <div>
                             <h3>Email</h3>
-                            <p>info@triocraft.com</p>
+                            <p>triocraft.official@gmail.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-phone"></i>
                         <div>
                             <h3>Phone</h3>
-                            <p>+1 (555) 123-4567</p>
+                            <p>+91 98300 00000</p>
                         </div>
                     </div>
                     <div class="contact-item">
                         <i class="fas fa-map-marker-alt"></i>
                         <div>
                             <h3>Location</h3>
-                            <p>123 Tech Street, Digital City</p>
+                            <p>Kolkata, West Bengal, India</p>
                         </div>
                     </div>
                     <div class="social-links">
                         <a href="#"><i class="fab fa-facebook-f"></i></a>
-                        <a href="#"><i class="fab fa-twitter"></i></a>
+                        <a href="#"><i class="fab fa-x-twitter"></i></a>
                         <a href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a href="#"><i class="fab fa-instagram"></i></a>
                     </div>
